--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "phaser": "^3.15.1",
-    "server": "^1.0.18"
+    "server": "^1.0.18",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "raw-loader": "^2.0.0",
