--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "phaser": "^3.15.1",
+    "phaser-matter-collision-plugin": "^0.10.2",
     "server": "^1.0.18",
     "socket.io": "^2.2.0"
   },
